fix(social): adjust facebook share button alignment

--- a/src/css/share.less
+++ b/src/css/share.less
@@ -26,6 +26,7 @@
 
     .facebook-social-media {
       width: 105px;
+      margin-top: -6px;
     }
 
     .google-plus-social-media {
